# active-model-bplus

./: .gitignore  CMakeLists.txt  README.md  active-droplets.py  activedroplets.py  activefield.py  cache.py  interpolate.py  ode.py  setup.py  test.py  testdroplets.py
activemodelbplus/: activedroplets.py  activefield.py  cache.py  classproperty.py  differentiate.py  interpolate.py  ode.py
activemodelbplus/integrator/: __init__.py
benchmark/: take_derivative.cu
examples/: literature-compare.ipynb  simulateOstwald.py  simulateReverseOstwald.py  simulateSpinodal.py  structureFactor.ipynb  tjhung2018_reversal_bubbles.csv  tjhung2018_reversal_clusters.csv  tjhung2018_sims_normal.csv  tjhung2018_sims_reversed.csv  tjhung2018_zeta=-1_lamb=0.5_d=2_phi0.csv  tjhung2018_zeta=-1_lamb=0.5_d=2_phi0_sim.csv  tjhung2018_zeta=-1_lamb=0.5_d=2_phi1.csv  tjhung2018_zeta=-1_lamb=0.5_d=2_phi1_sim.csv  tjhung2018_zeta=-4_lamb=-1_d=2_phi0.csv  tjhung2018_zeta=-4_lamb=-1_d=2_phi0_sim.csv  tjhung2018_zeta=-4_lamb=-1_d=2_phi1.csv  tjhung2018_zeta=-4_lamb=-1_d=2_phi1_sim.csv
src/: finite_difference.cuh  finite_difference.h  finite_differences.cuh  foreach.cuh  integrator.cc  integrator.cu  integrator.cuh  integrator.h  math_primitives.h  parameters.cu  parameters.cuh  parameters.h
test/: test_bindings.py  test_finite_differences.cc  test_integrator.cc  test_tjhung.cc  test_utilities.h  tjhung_ambplus.h  unit_tests.cc
